tests/neg/type_alias_inside_function.baa
// EXPECT: تعريف 'نوع' مسموح فقط على المستوى العام

صحيح الرئيسية() {
    نوع معرف = ط٦٤.
    إرجع ٠.
}
